--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -39,4 +46,11 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.App {
+}
+.App img{
+  width: 300px;
+  
 }
